fix: 优化依赖和显示

--- a/package.json
+++ b/package.json
@@ -33,13 +33,21 @@
   "dependencies": {
     "ajv": "^5.5.1",
     "ajv-i18n": "^2.2.0",
+    "assets-webpack-plugin": "^7.1.1",
     "axios": "0.18.1",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
     "compare-versions": "^3.4.0",
+    "compression-webpack-plugin": "^1.1.10",
     "copy-to-clipboard": "3.0.8",
     "cpu-load": "^1.0.0",
     "crypto-js": "^3.1.9-1",
     "deep-extend": "^0.5.0",
     "deref": "^0.7.3",
+    "dify": "^1.0.6",
     "easy-json-schema": "0.0.2-beta",
     "fs-extra": "^3.0.1",
     "generate-schema": "^2.6.0",
@@ -48,7 +56,7 @@
     "json-schema-faker": "0.5.0-rc16",
     "json-schema-ref-parser": "4.0.0",
     "json5": "0.5.1",
-    "jsondiffpatch": "0.3.11",
+    "jsondiffpatch": "^0.3.11",
     "jsonwebtoken": "7.4.1",
     "jsrsasign": "^8.0.12",
     "koa": "2.0.0",
@@ -76,13 +84,16 @@
     "nodemailer": "4.0.1",
     "os": "0.1.1",
     "qs": "^6.7.0",
+    "react-router": "^4.2.0",
     "request": "2.81.0",
     "safeify": "^5.0.5",
+    "schema-utils": "^0.3.0",
     "sha.js": "2.4.9",
     "sha1": "1.1.1",
     "swagger-client": "^3.5.1",
-    "tslib": "1.8.0",
+    "tslib": "^1.8.0",
     "underscore": "1.8.3",
+    "upath": "^1.2.0",
     "url": "0.11.0",
     "vm2": "^3.8.4",
     "yapi-plugin-qsso": "^1.1.0"
@@ -130,7 +141,7 @@
     "rc-queue-anim": "^1.2.0",
     "rc-scroll-anim": "^1.0.7",
     "rc-tween-one": "^1.5.5",
-    "react": "^16.2.0",
+    "react": "16.2.0",
     "react-dnd": "^2.5.1",
     "react-dnd-html5-backend": "^2.5.1",
     "react-dom": "^16.2.0",
