--- a/package.json
+++ b/package.json
@@ -127,7 +127,7 @@
     "eslint": "^3.19.0",
     "eslint-loader": "^1.9.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-react": "7.1.0",
     "extract-text-webpack-plugin": "2.0.0",
     "ghooks": "^2.0.0",
     "happypack": "^4.0.0-beta.5",
